# homomorphic-llm-proxy

./: .bandit  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION.md  Dockerfile  Dockerfile.multi-region  Dockerfile.test  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_CHARTER.md  README.md  RESEARCH_VALIDATION.md  SECURITY.md  basic_test.rs  benchmark.sh  build.rs  codecov.yml  config.toml  deny.toml  deploy-production.sh  (+21 more)
.cargo/: audit.toml  deny.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  performance_issue.md  security_issue.yml  security_vulnerability.md
.terragon/: config.yaml  value-metrics.json
.terragon/scripts/: value-discovery.sh
benches/: fhe_operations.rs  performance_bench.rs  proxy_performance.rs
benchmarks/: criterion-config.toml
config/: fhe-proxy.toml  production.toml
deployment/: Dockerfile.production  README.md  docker-compose.prod.yml  docker-compose.production.yml  production.yaml
deployment/aws/: deploy.sh
deployment/aws/terraform/: iam.tf  main.tf  outputs.tf  variables.tf
docker/: Dockerfile  Dockerfile.production  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  nginx.conf  prometheus.yml
docs/: AUTONOMOUS_SDLC.md  COMPLIANCE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SECURITY_ARCHITECTURE.md  SETUP_REQUIRED.md  WORKFLOW_IMPLEMENTATION.md
docs/adr/: 0001-adr-template.md
docs/deployment/: build-guide.md
docs/guides/: developer-guide.md  user-guide.md
docs/monitoring/: observability-guide.md
docs/runbooks/: README.md
docs/testing/: testing-strategy.md
docs/workflows/: README.md  ci-cd-requirements.md  github-actions-setup.md  value-discovery.md
docs/workflows/examples/: ci.yml  release.yml  security-scan.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  production-deployment.yaml  secret.yaml  service.yaml
k8s-manifests/: monitoring.yaml
load-testing/: k6-config.js
locales/: de.json  en.json  es.json  fr.json  ja.json  zh.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy-global.sh  deploy.sh  dev-setup.sh  health-check.sh
scripts/automation/: collect-metrics.py  dependency-updates.py
src/: config.rs  deployment.rs  error.rs  fhe.rs  global_config.rs  global_scaling.rs  health.rs  i18n.rs  lib.rs  main.rs  middleware.rs  monitoring.rs  observability.rs  performance.rs  performance_optimized.rs  performance_scaling.rs  proxy.rs  resilience.rs  scaling.rs  security.rs  security_enhanced.rs  validation.rs
terraform/: main.tf  outputs.tf  variables.tf
tests/: README.md  basic_functionality.rs  integration_test.rs  integration_tests.rs  test_basic_functionality.rs
tests/benchmarks/: bench_performance.rs
tests/e2e/: test_full_workflow.rs
tests/fixtures/: test_config.toml  test_prompts.json
tests/integration/: test_end_to_end.rs  test_proxy_server.rs  test_scaling.rs
tests/load/: test_load_testing.rs
tests/security/: test_security.rs  test_security_comprehensive.rs
tests/unit/: test_config.rs  test_fhe.rs
