[package]
name = "homomorphic-llm-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Org <team@your-org.com>"]
description = "GPU-accelerated gateway for fully homomorphic encryption (FHE) of LLM inference"
license = "Apache-2.0"
repository = "https://github.com/your-org/homomorphic-llm-proxy"
homepage = "https://github.com/your-org/homomorphic-llm-proxy"
documentation = "https://docs.your-org.com/fhe-proxy"
keywords = ["cryptography", "fhe", "privacy", "llm", "gpu"]
categories = ["cryptography", "web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
env_logger = "0.10"
log = "0.4"

[features]
default = []
gpu = ["dep:cudarc"]

[dependencies.cudarc]
version = "0.9"
optional = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
members = [
    ".",
    "crates/*"
]