[package]
name = "homomorphic-llm-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Org <team@your-org.com>"]
description = "GPU-accelerated gateway for fully homomorphic encryption (FHE) of LLM inference"
license = "Apache-2.0"
repository = "https://github.com/your-org/homomorphic-llm-proxy"
homepage = "https://github.com/your-org/homomorphic-llm-proxy"
documentation = "https://docs.your-org.com/fhe-proxy"
keywords = ["cryptography", "fhe", "privacy", "llm", "gpu"]
categories = ["cryptography", "web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server framework
axum = "0.8"
tower = "0.5"
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FHE and cryptography (using available versions)
# concrete = "2.11.0"  # Latest stable version
# For now, we'll implement a simulated FHE system
num-complex = "0.4"
rand = "0.9"

# HTTP client for LLM providers
reqwest = { version = "0.12", features = ["json", "stream"] }

# Configuration
config = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Base64 encoding for API transport
base64 = "0.22"

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
gpu = ["dep:cudarc"]

[dependencies.cudarc]
version = "0.17"
optional = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# [workspace]
# members = [
#     ".",
#     "crates/*"
# ]